[misc] Add RenderAPI_Metal.mm to VS project file too, for reference

--- a/NativeRenderingPlugin/PluginSource/projects/VisualStudio2015/RenderingPlugin.vcxproj.filters
+++ b/NativeRenderingPlugin/PluginSource/projects/VisualStudio2015/RenderingPlugin.vcxproj.filters
@@ -51,4 +51,7 @@
       <UniqueIdentifier>{c01468d4-90d4-4d19-9a9b-ee2f1b5e9083}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\source\RenderAPI_Metal.mm" />
+  </ItemGroup>
 </Project>
